--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-brands-svg-icons": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.6",
     "@pixi/sound": "^6.0.0",
+    "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "element-plus": "^2.7.0",
@@ -15,6 +21,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.8",
+    "vue-draggable-plus": "^0.4.0",
     "vue-i18n": "^9.10.2",
     "vue-router": "^4.3.1"
   },
