--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.8",
     "vue-draggable-plus": "^0.4.0",
+    "vue-draggable-resizable": "^3.0.0",
     "vue-i18n": "^9.10.2",
     "vue-router": "^4.3.1"
   },
