更新:新增时间轴元件移动到新图层和移动追加到已有图层

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glightbox": "^3.3.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
+    "uuid": "^9.0.1",
     "vue": "^3.2.8",
     "vue-draggable-plus": "^0.4.0",
     "vue-draggable-resizable": "^3.0.0",
