更新:销毁组件时回收事件监听器 新增:属性面板

--- a/.env.development
+++ b/.env.development
@@ -9,3 +9,7 @@ ENV_CONFIG= 'dev'
 
 VITE_APP_BASE_API = 'http://192.168.124.10:8085'
 
+VITE_APP_BACK_PATH = 'https://ai.yigee.cn'
+
+VITE_APP_WEB_NOTIFICATION = 'https://ai.yigee.cn'
+
