--- a/.env.production
+++ b/.env.production
@@ -9,3 +9,7 @@ ENV_CONFIG= 'prod',
 
 VITE_APP_BASE_API = 'https://xxxx'
 
+VITE_APP_BACK_PATH = 'https://ai.yigee.cn'
+
+VITE_APP_WEB_NOTIFICATION = 'https://ai.yigee.cn'
+
