--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/vue-fontawesome": "^3.0.6",
+    "@imengyu/vue3-context-menu": "^1.4.1",
     "@pixi/sound": "^6.0.0",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.8",
