更新:修复双击空白时间线提示类型问题。

--- a/.env.development
+++ b/.env.development
@@ -13,3 +13,5 @@ VITE_APP_BACK_PATH = 'https://ai.yigee.cn'
 
 VITE_APP_WEB_NOTIFICATION = 'https://ai.yigee.cn'
 
+VITE_APP_FILE_API = 'https://file.yigee.cn'
+
