新增:数字人类型资源。

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
 		"@vueuse/core": "^10.9.0",
 		"axios": "^1.6.8",
 		"bootstrap": "^5.3.3",
+		"crypto-js": "^4.2.0",
 		"element-plus": "^2.7.2",
+		"file-saver": "^2.0.5",
 		"glightbox": "^3.3.0",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persistedstate": "^3.2.1",
