--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"vue-draggable-plus": "^0.4.0",
 		"vue-draggable-resizable": "^3.0.0",
 		"vue-i18n": "^9.10.2",
-		"vue-router": "^4.3.1"
+		"vue-router": "^4.3.1",
+		"wavesurfer.js": "^7.7.15"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^1.6.0",
