--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"glightbox": "^3.3.0",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persistedstate": "^3.2.1",
+		"subtitle": "^4.2.1",
 		"uuid": "^9.0.1",
 		"vue": "^3.4.23",
 		"vue-draggable-plus": "^0.4.0",
