新增:数字人配音 更新:资源类型优化

--- a/.env.development
+++ b/.env.development
@@ -13,5 +13,6 @@ VITE_APP_BACK_PATH = 'https://ai.yigee.cn'
 
 VITE_APP_WEB_NOTIFICATION = 'https://ai.yigee.cn'
 
-VITE_APP_FILE_API = 'https://file.yigee.cn'
+VITE_APP_FILE_SERVER = 'https://file.yigee.cn'
 
+VITE_APP_BATCH_SERVER = 'http://192.168.124.10:8888'
