更新:作业进度查看结果直接打开视频 新增:视频合成支持多图层

--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,9 @@ NODE_ENV= 'development'
 
 ENV_CONFIG= 'dev'
 
-VITE_APP_BASE_API = 'http://192.168.124.10:8085'
+VITE_APP_BASE_SERVER = 'http://192.168.124.10:8085'
+
+VITE_APP_BATCH_SERVER = 'http://192.168.124.10:8888'
 
 VITE_APP_BACK_PATH = 'https://ai.yigee.cn'
 
@@ -15,4 +17,6 @@ VITE_APP_WEB_NOTIFICATION = 'https://ai.yigee.cn'
 
 VITE_APP_FILE_SERVER = 'https://file.yigee.cn'
 
-VITE_APP_BATCH_SERVER = 'http://192.168.124.10:8888'
+VITE_APP_ACCOUNT_SERVER = 'https://account.yigee.cn'
+
+VITE_APP_MESSAGE_SERVER = 'https://message.yigee.cn'
