--- a/.env.production
+++ b/.env.production
@@ -16,3 +16,7 @@ VITE_APP_WEB_NOTIFICATION = 'https://ai.yigee.cn'
 VITE_APP_FILE_SERVER = 'https://file.yigee.cn'
 
 VITE_APP_BATCH_SERVER = 'http://192.168.124.10:8888'
+
+VITE_APP_ACCOUNT_SERVER = 'https://account.yigee.cn'
+
+VITE_APP_MESSAGE_SERVER = 'https://message.yigee.cn'
