新增:字幕合成 更新:升级依赖组件

--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,7 @@ NODE_ENV= 'development'
 
 ENV_CONFIG= 'dev'
 
-VITE_APP_BATCH_SERVER = 'http://192.168.124.10:8888'
+VITE_APP_BATCH_SERVER = 'https://dev.yigee.cn:8086'
 
 VITE_APP_BACK_PATH = 'https://ai.yigee.cn'
 
@@ -18,3 +18,5 @@ VITE_APP_FILE_RESOURCE = 'https://yigee-file.oss-cn-beijing.aliyuncs.com'
 VITE_APP_ACCOUNT_SERVER = 'https://account.yigee.cn'
 
 VITE_APP_MESSAGE_SERVER = 'https://message.yigee.cn'
+
+VITE_APP_SPEECH_SERVER = 'https://tts.yigee.cn'
