--- a/.env.production
+++ b/.env.production
@@ -18,3 +18,5 @@ VITE_APP_FILE_RESOURCE = 'https://yigee-file.oss-cn-beijing.aliyuncs.com'
 VITE_APP_ACCOUNT_SERVER = 'https://account.yigee.cn'
 
 VITE_APP_MESSAGE_SERVER = 'https://message.yigee.cn'
+
+VITE_APP_SPEECH_SERVER = 'https://tts.yigee.cn'
