更新配置文件

--- a/.env.development
+++ b/.env.development
@@ -9,7 +9,7 @@ ENV_CONFIG= 'dev'
 
 VITE_APP_BATCH_SERVER = 'https://dev.yigee.cn:8086'
 
-VITE_APP_BACK_PATH = 'https://ai.yigee.cn'
+VITE_APP_BACK_PATH = 'https://dev.yigee.cn:3005'
 
 VITE_APP_FILE_SERVER = 'https://file.yigee.cn'
 
