--- a/.env.production
+++ b/.env.production
@@ -9,7 +9,7 @@ ENV_CONFIG= 'prod',
 
 VITE_APP_BATCH_SERVER = 'https://ai-batch-server.yigee.cn'
 
-VITE_APP_BACK_PATH = 'https://ai.yigee.cn'
+VITE_APP_BACK_PATH = 'https://ai-cloud.yigee.cn'
 
 VITE_APP_FILE_SERVER = 'https://file.yigee.cn'
 
