新增墨豆消耗

--- a/.env.production
+++ b/.env.production
@@ -11,6 +11,8 @@ VITE_APP_BATCH_SERVER = 'https://ai-batch-server.yigee.cn'
 
 VITE_APP_BACK_PATH = 'https://ai-cloud.yigee.cn'
 
+VITE_APP_CLOUD_SERVER = 'https://dev.yigee.cn:8085'
+
 VITE_APP_FILE_SERVER = 'https://file.yigee.cn'
 
 VITE_APP_FILE_RESOURCE = 'https://yigee-file.oss-cn-beijing.aliyuncs.com'
