--- a/.env.development
+++ b/.env.development
@@ -11,6 +11,8 @@ VITE_APP_BATCH_SERVER = 'https://dev.yigee.cn:8086'
 
 VITE_APP_BACK_PATH = 'https://dev.yigee.cn:3005'
 
+VITE_APP_CLOUD_SERVER = 'https://dev.yigee.cn:8085'
+
 VITE_APP_FILE_SERVER = 'https://file.yigee.cn'
 
 VITE_APP_FILE_RESOURCE = 'https://yigee-file.oss-cn-beijing.aliyuncs.com'
@@ -20,3 +22,4 @@ VITE_APP_ACCOUNT_SERVER = 'https://account.yigee.cn'
 VITE_APP_MESSAGE_SERVER = 'https://message.yigee.cn'
 
 VITE_APP_SPEECH_SERVER = 'https://tts.yigee.cn'
+
