更新:tabs显示错位，元素对齐。

--- a/.env.production
+++ b/.env.production
@@ -11,7 +11,7 @@ VITE_APP_BATCH_SERVER = 'https://ai-batch-server.yigee.cn'
 
 VITE_APP_BACK_PATH = 'https://ai-cloud.yigee.cn'
 
-VITE_APP_CLOUD_SERVER = 'https://dev.yigee.cn:8085'
+VITE_APP_CLOUD_SERVER = 'https://ai-cloud-server.yigee.cn'
 
 VITE_APP_FILE_SERVER = 'https://file.yigee.cn'
 
